--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "embla-carousel-react": "^8.6.0",
     "inngest": "^3.44.3",
     "input-otp": "^1.4.2",
+    "jotai": "^2.15.1",
     "lucide-react": "^0.548.0",
     "mprocs": "^0.7.3",
     "next": "15.5.4",
