--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "biome check",
     "format": "biome format --write",
     "inngest:dev": "inngest-cli dev",
-    "dev:all": "mprocs "
+    "dev:all": "mprocs -c mprocs.yaml"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.24",
