--- a/mprocs.yaml
+++ b/mprocs.yaml
@@ -1,6 +1,5 @@
 procs:
-  inngest:
-    cmd: ["npm", "run", "inngest:dev"]
-
   next:
-    cmd: ["npm", "run", "dev"]
+    shell: "npm run dev"
+  inngest:
+    shell: "npm run inngest:dev"
