--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ai-sdk/google": "^2.0.24",
     "@hookform/resolvers": "^5.2.2",
+    "@inngest/realtime": "^0.4.4",
     "@paralleldrive/cuid2": "^3.0.4",
     "@polar-sh/better-auth": "^1.2.1",
     "@polar-sh/sdk": "^0.40.2",
