google form trigger

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
+    "ngrok:dev": "npx ngrok http 3000",
+
     "format": "biome format --write",
     "inngest:dev": "inngest-cli dev",
     "dev:all": "mprocs -c mprocs.yaml"
