--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "next start",
     "lint": "biome check",
     "ngrok:dev": "npx ngrok http 3000",
-
     "format": "biome format --write",
     "inngest:dev": "inngest-cli dev",
     "dev:all": "mprocs -c mprocs.yaml"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.44",
     "@ai-sdk/google": "^2.0.24",
+    "@ai-sdk/openai": "^2.0.65",
     "@hookform/resolvers": "^5.2.2",
     "@inngest/realtime": "^0.4.4",
     "@paralleldrive/cuid2": "^3.0.4",
