--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "ngrok:dev": "npx ngrok http 3000",
+    "ngrok:dev": "\"C:\\Users\\user\\AppData\\Local\\Programs\\ngrok\\ngrok.exe\" http 3000 --domain=christene-unprecipitated-jangly.ngrok-free.dev",
     "format": "biome format --write",
     "inngest:dev": "inngest-cli dev",
     "dev:all": "mprocs -c mprocs.yaml"
